# undriven

./: .gitignore  CLAUDE.md  README.md  app.py  config.py  db.py  gmaps.py  models.py  ors.py  pyproject.toml  sheets.py  sync.py
.claude/agents/: deploy.md  test.md
backend/: auth.py  cli.py  config.py  database.py  db.py  gmaps.py  main.py  models.py  pyproject.toml  schemas.py  sync.py
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 0003_add_trip_segments.py
backend/routers/: addresses.py  auth_router.py  cars.py  maps.py  trips.py
backend/tests/: conftest.py  test_auth.py  test_db.py  test_gmaps.py  test_sync.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts
frontend/src/components/: AddressesModal.tsx  AutocompleteInput.tsx  CarsModal.tsx  LogForm.tsx  ProtectedRoute.tsx  SummaryCards.tsx  TripTable.tsx  WeeklyChart.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAutocomplete.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Trips.tsx
frontend/src/styles/: index.css
migrations/versions/: 0001_initial_schema.py  0002_add_sort_order_to_saved_cars.py  30c7af88035b_add_auth_fields_to_users_saved_.py  e4f3ff1e8ed6_add_users_table_and_user_id_on_trips.py
static/css/: style.css
static/js/: addresses.js  autocomplete.js  cars.js  chart.js  form.js  utils.js
templates/: _addresses_modal.html  _cars_modal.html  cars.html  index.html  login.html  signup.html  trips.html
tests/: test_auth.py  test_db.py  test_gmaps.py  test_ors.py  test_sync.py
