[project]
name = "undriven"
version = "0.1.0"
description = "Track car miles replaced by non-car trips"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    "flask-migrate>=4.0",
    "gspread>=6.0",
    "google-auth>=2.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "gunicorn>=25.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
